refactor: replace @hybridui components with @nuralyui components in package.json and update dependencies
- Updated package.json to replace all @hybridui dependencies with @nuralyui equivalents.
- Updated package-lock.json to reflect the new dependencies and their versions.
- Modified sidebars.js to include new component categories and items for @nuralyui components.

--- a/website-docs/docs/components/buttons.mdx
+++ b/website-docs/docs/components/buttons.mdx
@@ -7,8 +7,8 @@ sidebar_position: 2
 import { createComponent } from "@lit-labs/react";
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import "@hybridui/button";
-import { HyButton } from "@hybridui/button/react";
+import "@nuralyui/button";
+import { HyButton } from "@nuralyui/button/react";
 import { useState } from "react";
 import { BlockPicker } from "react-color";
 
@@ -152,14 +152,14 @@ In HybridUI, the available button types are primary, default, dashed, text, and 
   <TabItem value="npm" label="npm">
 
 ```shell
-npm install @hybridui/button
+npm install @nuralyui/button
 ```
 
 </TabItem>
  <TabItem value="uarn" label="yarn">
 
 ```shell
-yarn add @hybridui/button
+yarn add @nuralyui/button
 ```
 
 </TabItem>
@@ -181,7 +181,7 @@ text, and link buttons.
   <TabItem value="react" label="React">
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 
 export default function App() {
   return (
@@ -321,7 +321,7 @@ However, if you want more precise control over the positioning and arrangement o
 
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 
 export default function App() {
   return (
@@ -419,7 +419,7 @@ export const ButtonSizeExample = ({ children, color }) => {
 
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 
 export default function App() {
   return (
@@ -517,7 +517,7 @@ export const ButtonLoadingExample = ({ children, color }) => {
   <TabItem value="react" label="React">
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 import { useState } from "react";
 
 export default function App() {
