--- a/website-docs/docs/components/calendar.mdx
+++ b/website-docs/docs/components/calendar.mdx
@@ -2,10 +2,10 @@
 sidebar_position: 3
 ---
 
-import "@hybridui/datepicker";
-import "@hybridui/button";
-import { HyDatepicker } from "@hybridui/datepicker/react";
-import { HyButton } from "@hybridui/button/react";
+import "@nuralyui/datepicker";
+import "@nuralyui/button";
+import { HyDatepicker } from "@nuralyui/datepicker/react";
+import { HyButton } from "@nuralyui/button/react";
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
@@ -44,7 +44,7 @@ This component allows users to choose or enter a date in a defined format.
   <TabItem value="react" label="React">
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 
 export default function App() {
   return (
@@ -89,7 +89,7 @@ export default function App() {
   <TabItem value="react" label="React">
 
 ```jsx
-import { HyButton } from "@hybridui/button/react";
+import { HyButton } from "@nuralyui/button/react";
 
 export default function App() {
   return (
