--- a/website-docs/docs/components/dropdown.mdx
+++ b/website-docs/docs/components/dropdown.mdx
@@ -4,16 +4,16 @@ sidebar_position: 5
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import "@hybridui/icon";
-import "@hybridui/button";
-import "@hybridui/input";
-import "@hybridui/dropdown";
+import "@nuralyui/icon";
+import "@nuralyui/button";
+import "@nuralyui/input";
+import "@nuralyui/dropdown";
 import { useState } from "react";
 import { BlockPicker } from "react-color";
-import { HyInput } from "@hybridui/input/react";
-import { HyIcon } from "@hybridui/icon/react";
-import { HyButton } from "@hybridui/button/react";
-import { HyDropdown } from "@hybridui/dropdown/react";
+import { HyInput } from "@nuralyui/input/react";
+import { HyIcon } from "@nuralyui/icon/react";
+import { HyButton } from "@nuralyui/button/react";
+import { HyDropdown } from "@nuralyui/dropdown/react";
 import { html } from "lit";
 
 # Dropdown
