--- a/website-docs/docs/components/icons.mdx
+++ b/website-docs/docs/components/icons.mdx
@@ -4,14 +4,14 @@ sidebar_position: 4
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import "@hybridui/icon";
-import "@hybridui/button";
-import "@hybridui/input";
+import "@nuralyui/icon";
+import "@nuralyui/button";
+import "@nuralyui/input";
 import { useState } from "react";
 import { BlockPicker } from "react-color";
-import { HyInput } from "@hybridui/input/react";
-import { HyIcon } from "@hybridui/icon/react";
-import { HyButton } from "@hybridui/button/react";
+import { HyInput } from "@nuralyui/input/react";
+import { HyIcon } from "@nuralyui/icon/react";
+import { HyButton } from "@nuralyui/button/react";
 
 # Icons
 
