--- a/website-docs/docs/components/inputs.mdx
+++ b/website-docs/docs/components/inputs.mdx
@@ -4,14 +4,14 @@ sidebar_position: 3
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import "@hybridui/icon";
-import "@hybridui/button";
-import "@hybridui/input";
+import "@nuralyui/icon";
+import "@nuralyui/button";
+import "@nuralyui/input";
 import { useState } from "react";
 import { BlockPicker } from "react-color";
-import { HyInput } from "@hybridui/input/react";
-import { HyIcon } from "@hybridui/icon/react";
-import { HyButton } from "@hybridui/button/react";
+import { HyInput } from "@nuralyui/input/react";
+import { HyIcon } from "@nuralyui/icon/react";
+import { HyButton } from "@nuralyui/button/react";
 
 # Input
 
@@ -24,14 +24,14 @@ Input can be provided or modified using either a keyboard or a mouse.
   <TabItem value="npm" label="npm">
 
 ```shell
-npm install @hybridui/input
+npm install @nuralyui/input
 ```
 
 </TabItem>
  <TabItem value="uarn" label="yarn">
 
 ```shell
-yarn add @hybridui/input
+yarn add @nuralyui/input
 ```
 
 </TabItem>
