--- a/website-docs/docs/components/radio.mdx
+++ b/website-docs/docs/components/radio.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 12
+sidebar_position: 10
 ---
 
 # Radio
@@ -10,7 +10,186 @@ import "@nuralyui/radio";
 import { HyRadio } from "@nuralyui/radio/react";
 import { useState } from "react";
 
-The Radio component allows users to select one option from a set of mutually exclusive options. It's perfect for forms where only one choice should be made from multiple alternatives.
+export const BasicRadioDemo = () => {
+  const [selectedValue, setSelectedValue] = useState("");
+  
+  const options = [
+    { value: 'option1', label: 'Option 1' },
+    { value: 'option2', label: 'Option 2' },
+    { value: 'option3', label: 'Option 3' },
+    { value: 'option4', label: 'Option 4' }
+  ];
+  
+  const handleChange = (e) => {
+    setSelectedValue(e.detail.value);
+  };
+  
+  return (
+    <div style={{ marginBottom: "20px" }}>
+      <HyRadio
+        options={options}
+        onChanged={handleChange}
+      />
+      {selectedValue && (
+        <div style={{ marginTop: "10px", color: "#666" }}>
+          Selected: {selectedValue}
+        </div>
+      )}
+    </div>
+  );
+};
+
+export const ButtonRadioDemo = () => {
+  const [selectedValue, setSelectedValue] = useState("option2");
+  
+  const options = [
+    { value: 'option1', label: 'Small' },
+    { value: 'option2', label: 'Medium' },
+    { value: 'option3', label: 'Large' },
+    { value: 'option4', label: 'Extra Large' }
+  ];
+  
+  const handleChange = (e) => {
+    setSelectedValue(e.detail.value);
+  };
+  
+  return (
+    <div style={{ marginBottom: "20px" }}>
+      <HyRadio
+        options={options}
+        type="button"
+        defaultValue={selectedValue}
+        onChanged={handleChange}
+      />
+      {selectedValue && (
+        <div style={{ marginTop: "10px", color: "#666" }}>
+          Selected: {selectedValue}
+        </div>
+      )}
+    </div>
+  );
+};
+
+export const DirectionRadioDemo = () => {
+  const options = [
+    { value: 'left', label: 'Left' },
+    { value: 'center', label: 'Center' },
+    { value: 'right', label: 'Right' }
+  ];
+  
+  return (
+    <div style={{ display: "flex", gap: "30px", flexDirection: "column" }}>
+      <div>
+        <label style={{ display: "block", marginBottom: "10px", fontSize: "16px", fontWeight: "bold" }}>Vertical (Default):</label>
+        <HyRadio
+          options={options}
+          direction="vertical"
+        />
+      </div>
+      <div>
+        <label style={{ display: "block", marginBottom: "10px", fontSize: "16px", fontWeight: "bold" }}>Horizontal:</label>
+        <HyRadio
+          options={options}
+          direction="horizontal"
+        />
+      </div>
+    </div>
+  );
+};
+
+export const PositionRadioDemo = () => {
+  const options = [
+    { value: 'option1', label: 'First Option' },
+    { value: 'option2', label: 'Second Option' },
+    { value: 'option3', label: 'Third Option' }
+  ];
+  
+  return (
+    <div style={{ display: "flex", gap: "30px", flexDirection: "column" }}>
+      <div>
+        <label style={{ display: "block", marginBottom: "10px", fontSize: "16px", fontWeight: "bold" }}>Position Left (Default):</label>
+        <HyRadio
+          options={options}
+          position="left"
+        />
+      </div>
+      <div>
+        <label style={{ display: "block", marginBottom: "10px", fontSize: "16px", fontWeight: "bold" }}>Position Right:</label>
+        <HyRadio
+          options={options}
+          position="right"
+        />
+      </div>
+    </div>
+  );
+};
+
+export const DisabledRadioDemo = () => {
+  const options = [
+    { value: 'option1', label: 'Available Option' },
+    { value: 'option2', label: 'Disabled Option', disabled: true },
+    { value: 'option3', label: 'Another Available' },
+    { value: 'option4', label: 'Also Disabled', disabled: true }
+  ];
+  
+  return (
+    <div style={{ marginBottom: "20px" }}>
+      <HyRadio
+        options={options}
+        defaultValue="option3"
+      />
+    </div>
+  );
+};
+
+export const StateRadioDemo = () => {
+  const options = [
+    { 
+      value: 'option1', 
+      label: 'Error Option',
+      state: 'error',
+      message: 'This option has an error'
+    },
+    { 
+      value: 'option2', 
+      label: 'Warning Option',
+      state: 'warning',
+      message: 'This option has a warning'
+    },
+    { 
+      value: 'option3', 
+      label: 'Normal Option'
+    }
+  ];
+  
+  return (
+    <div style={{ marginBottom: "20px" }}>
+      <HyRadio
+        options={options}
+      />
+    </div>
+  );
+};
+
+export const IconRadioDemo = () => {
+  const options = [
+    { value: 'user', label: 'User Profile', icon: 'user' },
+    { value: 'settings', label: 'Settings', icon: 'settings' },
+    { value: 'notifications', label: 'Notifications', icon: 'bell' },
+    { value: 'help', label: 'Help', icon: 'help' }
+  ];
+  
+  return (
+    <div style={{ marginBottom: "20px" }}>
+      <HyRadio
+        options={options}
+        type="button"
+      />
+    </div>
+  );
+};
+
+The Radio component allows users to select one option from a set of mutually exclusive choices. It supports various styles including traditional radio buttons and button-style selections.
 
 ## How to use it
 
@@ -41,10 +220,21 @@ yarn add @nuralyui/radio
   import '@nuralyui/radio';
 </script>
 
-<hy-radio-input 
-  options='[{"label": "Option 1", "value": "opt1"}, {"label": "Option 2", "value": "opt2"}]'
-  defaultValue="opt1">
-</hy-radio-input>
+<script>
+const options = [
+  { value: 'option1', label: 'Option 1' },
+  { value: 'option2', label: 'Option 2' },
+  { value: 'option3', label: 'Option 3' }
+];
+
+const radioElement = document.querySelector('hy-radio-input');
+radioElement.options = options;
+radioElement.addEventListener('change', (e) => {
+  console.log('Selected:', e.detail.value);
+});
+</script>
+
+<hy-radio-input></hy-radio-input>
 ```
 
 </TabItem>
@@ -53,18 +243,21 @@ yarn add @nuralyui/radio
 ```jsx
 import { HyRadio } from '@nuralyui/radio/react';
 
-const options = [
-  { label: 'Option 1', value: 'opt1' },
-  { label: 'Option 2', value: 'opt2' },
-  { label: 'Option 3', value: 'opt3' }
-];
-
 function App() {
+  const options = [
+    { value: 'option1', label: 'Option 1' },
+    { value: 'option2', label: 'Option 2' },
+    { value: 'option3', label: 'Option 3' }
+  ];
+
+  const handleChange = (e) => {
+    console.log('Selected:', e.detail.value);
+  };
+
   return (
     <HyRadio 
       options={options}
-      defaultValue="opt1"
-      onChange={(value) => console.log('Selected:', value)}
+      onChange={handleChange}
     />
   );
 }
@@ -73,310 +266,450 @@ function App() {
 </TabItem>
 </Tabs>
 
-## Basic Example
-
-export const BasicRadioExample = () => {
-  const options = [
-    { label: 'Apple', value: 'apple' },
-    { label: 'Banana', value: 'banana' },
-    { label: 'Orange', value: 'orange' }
-  ];
-
-  return (
-    <HyRadio 
-      options={options}
-      defaultValue="apple"
-      onChange={(value) => console.log('Selected fruit:', value)}
-    />
-  );
-};
-
-<BasicRadioExample />
-
-## Radio Button Types
-
-export const RadioTypeExample = () => {
-  const options = [
-    { label: 'Option A', value: 'a' },
-    { label: 'Option B', value: 'b' },
-    { label: 'Option C', value: 'c' }
-  ];
-
-  return (
-    <div style={{ display: 'flex', flexDirection: 'column', gap: '24px' }}>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Default Type</h4>
-        <HyRadio 
-          options={options}
-          type="default"
-          defaultValue="a"
-        />
-      </div>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Button Type</h4>
-        <HyRadio 
-          options={options}
-          type="button"
-          defaultValue="b"
-        />
-      </div>
-    </div>
-  );
-};
-
-<RadioTypeExample />
-
-## Direction and Position
-
-export const RadioLayoutExample = () => {
-  const options = [
-    { label: 'Option 1', value: '1' },
-    { label: 'Option 2', value: '2' },
-    { label: 'Option 3', value: '3' }
-  ];
-
-  return (
-    <div style={{ display: 'grid', gridTemplateColumns: '1fr 1fr', gap: '24px' }}>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Vertical Direction</h4>
-        <HyRadio 
-          options={options}
-          direction="vertical"
-          defaultValue="1"
-        />
-      </div>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Horizontal Direction</h4>
-        <HyRadio 
-          options={options}
-          direction="horizontal"
-          defaultValue="2"
-        />
-      </div>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Label on Left</h4>
-        <HyRadio 
-          options={options}
-          position="left"
-          defaultValue="1"
-        />
-      </div>
-      <div>
-        <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Label on Right</h4>
-        <HyRadio 
-          options={options}
-          position="right"
-          defaultValue="2"
-        />
-      </div>
-    </div>
-  );
-};
-
-<RadioLayoutExample />
-
-## Disabled Options
-
-export const DisabledRadioExample = () => {
-  const options = [
-    { label: 'Available Option', value: 'available' },
-    { label: 'Disabled Option', value: 'disabled', disabled: true },
-    { label: 'Another Available', value: 'available2' },
-    { label: 'Also Disabled', value: 'disabled2', disabled: true }
-  ];
-
-  return (
-    <HyRadio 
-      options={options}
-      defaultValue="available"
-      onChange={(value) => console.log('Selected:', value)}
-    />
-  );
-};
-
-<DisabledRadioExample />
-
-## Form Integration
-
-export const FormRadioExample = () => {
-  const [selectedValue, setSelectedValue] = useState('medium');
-  
-  const sizeOptions = [
-    { label: 'Small', value: 'small' },
-    { label: 'Medium', value: 'medium' },
-    { label: 'Large', value: 'large' },
-    { label: 'Extra Large', value: 'xl' }
-  ];
-
-  const colorOptions = [
-    { label: 'Red', value: 'red' },
-    { label: 'Blue', value: 'blue' },
-    { label: 'Green', value: 'green' }
-  ];
-
-  return (
-    <form style={{ display: 'flex', flexDirection: 'column', gap: '20px', maxWidth: '400px' }}>
-      <div>
-        <label style={{ display: 'block', marginBottom: '8px', fontWeight: 'bold' }}>
-          Select Size:
-        </label>
-        <HyRadio 
-          options={sizeOptions}
-          defaultValue="medium"
-          onChange={(value) => setSelectedValue(value)}
-        />
-      </div>
-      
-      <div>
-        <label style={{ display: 'block', marginBottom: '8px', fontWeight: 'bold' }}>
-          Select Color:
-        </label>
-        <HyRadio 
-          options={colorOptions}
-          type="button"
-          direction="horizontal"
-          defaultValue="red"
-        />
-      </div>
-      
-      <div style={{ marginTop: '16px', padding: '12px', backgroundColor: '#f5f5f5', borderRadius: '4px' }}>
-        <strong>Selected Size:</strong> {selectedValue}
-      </div>
-    </form>
-  );
-};
-
-<FormRadioExample />
-
-## Payment Method Example
-
-export const PaymentRadioExample = () => {
-  const paymentOptions = [
-    { label: '💳 Credit Card', value: 'credit' },
-    { label: '🏦 Bank Transfer', value: 'bank' },
-    { label: '📱 PayPal', value: 'paypal' },
-    { label: '💰 Cash on Delivery', value: 'cod' }
-  ];
-
-  return (
-    <div style={{ maxWidth: '300px' }}>
-      <h4 style={{ margin: '0 0 12px 0', fontSize: '16px' }}>Choose Payment Method</h4>
-      <HyRadio 
-        options={paymentOptions}
-        defaultValue="credit"
-        onChange={(value) => console.log('Payment method:', value)}
-      />
-    </div>
-  );
-};
-
-<PaymentRadioExample />
-
 ## API Reference
 
 ### Properties
 
 | Property | Type | Default | Description |
 |----------|------|---------|-------------|
-| `options` | `RadioButtonOption[]` | `[]` | Array of radio options |
-| `type` | `'default' \| 'button'` | `'default'` | Style type of the radio buttons |
-| `position` | `'left' \| 'right'` | `'left'` | Position of the radio button relative to label |
-| `direction` | `'vertical' \| 'horizontal'` | `'vertical'` | Layout direction of the radio group |
-| `defaultValue` | `string` | `undefined` | Default selected value |
+| `options` | `RadioButtonOption[]` | `[]` | Array of radio option objects |
+| `defaultValue` | `string` | `undefined` | The initially selected value |
+| `type` | `'default' \| 'button'` | `'default'` | Display style of radio buttons |
+| `direction` | `'vertical' \| 'horizontal'` | `'vertical'` | Layout direction of options |
+| `position` | `'left' \| 'right'` | `'left'` | Position of radio button relative to label |
 
-### Types
+### RadioButtonOption Type
 
-#### RadioButtonOption
-
-```typescript
-interface RadioButtonOption {
-  label: string;
-  value: string;
-  disabled?: boolean;
-}
-```
+| Property | Type | Default | Description |
+|----------|------|---------|-------------|
+| `value` | `string` | - | The value of the option |
+| `label` | `string` | - | The display text for the option |
+| `icon` | `string` | `undefined` | Optional icon name |
+| `disabled` | `boolean` | `false` | Whether the option is disabled |
+| `state` | `'error' \| 'warning'` | `undefined` | Validation state |
+| `message` | `string` | `undefined` | Message to display for error/warning states |
 
 ### Events
 
-| Event | Description | Event Detail |
-|-------|-------------|--------------|
-| `change` | Fired when selection changes | `{ value: string }` |
-
-### CSS Custom Properties
-
-You can customize the radio appearance using CSS custom properties:
-
-```css
-hy-radio-input {
-  --radio-size: 16px;
-  --radio-border: 1px solid #d9d9d9;
-  --radio-border-checked: #1890ff;
-  --radio-background-checked: #1890ff;
-  --radio-dot-color: #ffffff;
-  --radio-label-margin: 8px;
-  --radio-disabled-color: #00000040;
-  --radio-disabled-background: #f5f5f5;
-  
-  /* Button type specific */
-  --radio-button-background: #ffffff;
-  --radio-button-border: 1px solid #d9d9d9;
-  --radio-button-checked-background: #1890ff;
-  --radio-button-checked-color: #ffffff;
-  --radio-button-hover-border: #40a9ff;
-}
-```
+| Event | Description |
+|-------|-------------|
+| `change` | Fired when the selection changes, returns `e.detail.value` |
 
 ## Examples
 
-### Survey Question
+### Basic Radio Buttons
 
-```html
-<div>
-  <h3>How satisfied are you with our service?</h3>
-  <hy-radio-input 
-    options='[
-      {"label": "Very Satisfied", "value": "very-satisfied"},
-      {"label": "Satisfied", "value": "satisfied"},
-      {"label": "Neutral", "value": "neutral"},
-      {"label": "Dissatisfied", "value": "dissatisfied"},
-      {"label": "Very Dissatisfied", "value": "very-dissatisfied"}
-    ]'
-    direction="vertical">
-  </hy-radio-input>
-</div>
+Try selecting different options to see the component in action:
+
+<BasicRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+import { useState } from "react";
+
+export default function App() {
+  const [selectedValue, setSelectedValue] = useState("");
+  
+  const options = [
+    { value: 'option1', label: 'Option 1' },
+    { value: 'option2', label: 'Option 2' },
+    { value: 'option3', label: 'Option 3' },
+    { value: 'option4', label: 'Option 4' }
+  ];
+  
+  const handleChange = (e) => {
+    setSelectedValue(e.detail.value);
+  };
+  
+  return (
+    <div>
+      <hy-radio-input
+        options={options}
+        onChange={handleChange}
+      />
+      {selectedValue && (
+        <div>Selected: {selectedValue}</div>
+      )}
+    </div>
+  );
+}
 ```
 
-### Settings Panel
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
 
 ```html
-<div>
-  <h3>Theme Preference</h3>
-  <hy-radio-input 
-    type="button"
-    direction="horizontal"
-    options='[
-      {"label": "🌞 Light", "value": "light"},
-      {"label": "🌙 Dark", "value": "dark"},
-      {"label": "🖥️ System", "value": "system"}
-    ]'
-    defaultValue="system">
-  </hy-radio-input>
-</div>
+<script>
+const options = [
+  { value: 'option1', label: 'Option 1' },
+  { value: 'option2', label: 'Option 2' },
+  { value: 'option3', label: 'Option 3' },
+  { value: 'option4', label: 'Option 4' }
+];
+
+const radioElement = document.querySelector('hy-radio-input');
+radioElement.options = options;
+radioElement.addEventListener('change', (e) => {
+  console.log('Selected:', e.detail.value);
+});
+</script>
+
+<hy-radio-input></hy-radio-input>
 ```
 
-### Product Options
+</TabItem>
+</Tabs>
+</details>
+
+### Button Style Radio
+
+For a more modern look, use the button style:
+
+<ButtonRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+import { useState } from "react";
+
+export default function App() {
+  const [selectedValue, setSelectedValue] = useState("option2");
+  
+  const options = [
+    { value: 'option1', label: 'Small' },
+    { value: 'option2', label: 'Medium' },
+    { value: 'option3', label: 'Large' },
+    { value: 'option4', label: 'Extra Large' }
+  ];
+  
+  return (
+    <hy-radio-input
+      options={options}
+      type="button"
+      defaultValue={selectedValue}
+    />
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
 
 ```html
-<div>
-  <h3>Select Package</h3>
-  <hy-radio-input 
-    options='[
-      {"label": "Basic - $9.99/month", "value": "basic"},
-      {"label": "Pro - $19.99/month", "value": "pro"},
-      {"label": "Enterprise - $49.99/month", "value": "enterprise"},
-      {"label": "Contact Sales", "value": "contact", "disabled": true}
-    ]'
-    defaultValue="basic">
-  </hy-radio-input>
-</div>
+<script>
+const options = [
+  { value: 'option1', label: 'Small' },
+  { value: 'option2', label: 'Medium' },
+  { value: 'option3', label: 'Large' },
+  { value: 'option4', label: 'Extra Large' }
+];
+
+const radioElement = document.querySelector('hy-radio-input');
+radioElement.options = options;
+radioElement.type = 'button';
+radioElement.defaultValue = 'option2';
+</script>
+
+<hy-radio-input></hy-radio-input>
 ```
+
+</TabItem>
+</Tabs>
+</details>
+
+### Direction Layout
+
+Control the layout direction of radio options:
+
+<DirectionRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+
+export default function App() {
+  const options = [
+    { value: 'left', label: 'Left' },
+    { value: 'center', label: 'Center' },
+    { value: 'right', label: 'Right' }
+  ];
+  
+  return (
+    <div>
+      <div>
+        <label>Vertical (Default):</label>
+        <hy-radio-input
+          options={options}
+          direction="vertical"
+        />
+      </div>
+      <div>
+        <label>Horizontal:</label>
+        <hy-radio-input
+          options={options}
+          direction="horizontal"
+        />
+      </div>
+    </div>
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```html
+<!-- Vertical -->
+<hy-radio-input direction="vertical"></hy-radio-input>
+
+<!-- Horizontal -->
+<hy-radio-input direction="horizontal"></hy-radio-input>
+```
+
+</TabItem>
+</Tabs>
+</details>
+
+### Position Control
+
+Change the position of radio buttons relative to labels:
+
+<PositionRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+
+export default function App() {
+  const options = [
+    { value: 'option1', label: 'First Option' },
+    { value: 'option2', label: 'Second Option' },
+    { value: 'option3', label: 'Third Option' }
+  ];
+  
+  return (
+    <div>
+      <div>
+        <label>Position Left (Default):</label>
+        <hy-radio-input
+          options={options}
+          position="left"
+        />
+      </div>
+      <div>
+        <label>Position Right:</label>
+        <hy-radio-input
+          options={options}
+          position="right"
+        />
+      </div>
+    </div>
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```html
+<!-- Position Left -->
+<hy-radio-input position="left"></hy-radio-input>
+
+<!-- Position Right -->
+<hy-radio-input position="right"></hy-radio-input>
+```
+
+</TabItem>
+</Tabs>
+</details>
+
+### Disabled Options
+
+Some options can be disabled while others remain selectable:
+
+<DisabledRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+
+export default function App() {
+  const options = [
+    { value: 'option1', label: 'Available Option' },
+    { value: 'option2', label: 'Disabled Option', disabled: true },
+    { value: 'option3', label: 'Another Available' },
+    { value: 'option4', label: 'Also Disabled', disabled: true }
+  ];
+  
+  return (
+    <hy-radio-input
+      options={options}
+      defaultValue="option3"
+    />
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```html
+<script>
+const options = [
+  { value: 'option1', label: 'Available Option' },
+  { value: 'option2', label: 'Disabled Option', disabled: true },
+  { value: 'option3', label: 'Another Available' },
+  { value: 'option4', label: 'Also Disabled', disabled: true }
+];
+</script>
+
+<hy-radio-input></hy-radio-input>
+```
+
+</TabItem>
+</Tabs>
+</details>
+
+### Validation States
+
+Radio options can display error or warning states with messages:
+
+<StateRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+
+export default function App() {
+  const options = [
+    { 
+      value: 'option1', 
+      label: 'Error Option',
+      state: 'error',
+      message: 'This option has an error'
+    },
+    { 
+      value: 'option2', 
+      label: 'Warning Option',
+      state: 'warning',
+      message: 'This option has a warning'
+    },
+    { 
+      value: 'option3', 
+      label: 'Normal Option'
+    }
+  ];
+  
+  return (
+    <hy-radio-input options={options} />
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```html
+<script>
+const options = [
+  { 
+    value: 'option1', 
+    label: 'Error Option',
+    state: 'error',
+    message: 'This option has an error'
+  },
+  { 
+    value: 'option2', 
+    label: 'Warning Option',
+    state: 'warning',
+    message: 'This option has a warning'
+  },
+  { 
+    value: 'option3', 
+    label: 'Normal Option'
+  }
+];
+</script>
+
+<hy-radio-input></hy-radio-input>
+```
+
+</TabItem>
+</Tabs>
+</details>
+
+### With Icons
+
+Add icons to radio options for better visual recognition:
+
+<IconRadioDemo />
+
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
+
+```jsx
+import { HyRadio } from "@nuralyui/radio/react";
+
+export default function App() {
+  const options = [
+    { value: 'user', label: 'User Profile', icon: 'user' },
+    { value: 'settings', label: 'Settings', icon: 'settings' },
+    { value: 'notifications', label: 'Notifications', icon: 'bell' },
+    { value: 'help', label: 'Help', icon: 'help' }
+  ];
+  
+  return (
+    <hy-radio-input
+      options={options}
+      type="button"
+    />
+  );
+}
+```
+
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```html
+<script>
+const options = [
+  { value: 'user', label: 'User Profile', icon: 'user' },
+  { value: 'settings', label: 'Settings', icon: 'settings' },
+  { value: 'notifications', label: 'Notifications', icon: 'bell' },
+  { value: 'help', label: 'Help', icon: 'help' }
+];
+</script>
+
+<hy-radio-input type="button"></hy-radio-input>
+```
+
+</TabItem>
+</Tabs>
+</details>
