--- a/website-docs/docs/components/tabs.mdx
+++ b/website-docs/docs/components/tabs.mdx
@@ -4,11 +4,11 @@ sidebar_orientation: 7
 
 # Tabs
 
-import { HyTabsComponent } from "@hybridui/tabs/react";
+import { HyTabsComponent } from "@nuralyui/tabs/react";
 import { useState } from "react";
 import { html } from "lit";
-import "@hybridui/icon";
-import { HyButton } from "@hybridui/button/react";
+import "@nuralyui/icon";
+import { HyButton } from "@nuralyui/button/react";
 
 export const swapElements = (arr, index1, index2) => {
   arr = arr;
